<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/word_delete"
        android:layout_width="14dp"
        android:layout_height="14dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="7dp"
        android:background="@drawable/word_bg_delete"
        android:elevation="1dp"
        android:src="@drawable/ic_delete"
        app:tint="@color/colorPrimaryDark"
        android:contentDescription="@string/delete" />

    <androidx.cardview.widget.CardView
        android:id="@+id/word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:cardMaxElevation="0dp"
        app:cardPreventCornerOverlap="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/word_text_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:padding="8dp"
                android:text="@string/o"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/word_text_eng"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_weight="0.4"
                android:padding="8dp"
                android:text="@string/lorem_ipsum"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/word_text_swe"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="0.4"
                android:padding="8dp"
                android:text="@string/lorem_ipsum"
                android:textColor="@android:color/white" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>