<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_word_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddWordActivity">


    <LinearLayout
        android:id="@+id/add_word_window_bg"
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:layout_centerInParent="true"
        android:background="@drawable/word_bg_layout"
        android:orientation="vertical"
        tools:ignore="UselessParent">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/add_note_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/word"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/add_word_text_bg"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="12dp"
            android:layout_weight="1"
            android:background="@drawable/word_text_bg_layout"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="20sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/add_word_text_eng"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.4"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:autofillHints="Word text"
                    android:background="@android:color/transparent"
                    android:gravity="top"
                    android:hint="@string/english"
                    android:inputType="textMultiLine"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/grey"
                    android:textCursorDrawable="@drawable/word_text_cursor_color"
                    android:textSize="16sp"
                    tools:ignore="LabelFor,SpeakableTextPresentCheck" />

                <EditText
                    android:id="@+id/add_word_text_swe"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="0.4"
                    android:autofillHints="Word text"
                    android:background="@android:color/transparent"
                    android:gravity="top"
                    android:hint="@string/swedish"
                    android:inputType="textMultiLine"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/grey"
                    android:textCursorDrawable="@drawable/word_text_cursor_color"
                    android:textSize="16sp"
                    tools:ignore="LabelFor,SpeakableTextPresentCheck" />
            </LinearLayout>

        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_word_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/word_button_bg_layout"
            android:text="@string/add_update_word"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>
</RelativeLayout>